# meetwise-api

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  wait_db.py
.github/workflows/: ci.yaml
app/: settings.py  urls.py
meetwise/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  views.py
meetwise/migrations/: 0001_initial.py
