[project]
name = "meetwise"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mariaeduardanichelle", email = "madunichelle@gmail.com"},
]
dependencies = ["django>=5.2.4", "python-decouple>=3.8"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
