[project]
name = "meetwise"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mariaeduardanichelle", email = "madunichelle@gmail.com"},
]
dependencies = ["django>=5.2.4", "python-decouple>=3.8", "djangorestframework>=3.16.0", "psycopg2-binary>=2.9.10", "djangorestframework-simplejwt>=5.5.0", "django-cors-headers>=4.7.0", "dotenv>=0.9.9"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
